force-app/main/default/objects/echosign_dev1__ParticipantSet__c/fields/echosign_dev1__ParticipantSetId__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__ParticipantSetId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>ParticipantSetId</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>