force-app/main/default/objects/echosign_dev1__ParticipantSet__c/fields/echosign_dev1__Roles__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Roles__c</fullName>
    <label>Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SENDER</fullName>
            </value>
            <value>
                <fullName>SIGNER</fullName>
            </value>
            <value>
                <fullName>APPROVER</fullName>
            </value>
            <value>
                <fullName>ACCEPTOR</fullName>
            </value>
            <value>
                <fullName>FORM_FILLER</fullName>
            </value>
            <value>
                <fullName>CERTIFIED_RECIPIENT</fullName>
            </value>
            <value>
                <fullName>DELEGATE_TO_SIGNER</fullName>
            </value>
            <value>
                <fullName>DELEGATE_TO_APPROVER</fullName>
            </value>
            <value>
                <fullName>DELEGATE_TO_ACCEPTOR</fullName>
            </value>
            <value>
                <fullName>DELEGATE_TO_FORM_FILLER</fullName>
            </value>
            <value>
                <fullName>DELEGATE_TO_CERTIFIED_RECIPIENT</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>DELEGATE</fullName>
            </value>
            <value>
                <fullName>SHARE</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>