force-app/main/default/objects/echosign_dev1__ParticipantSet__c/fields/echosign_dev1__SecurityOptions__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__SecurityOptions__c</fullName>
    <label>SecurityOptions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PASSWORD</fullName>
            </value>
            <value>
                <fullName>KBA</fullName>
            </value>
            <value>
                <fullName>PHONE</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>GOVERNMENT ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>