force-app/main/default/objects/echosign_dev1__ParticipantSet__c/fields/echosign_dev1__Status__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WAITING_FOR_MY_SIGNATURE</fullName>
            </value>
            <value>
                <fullName>WAITING_FOR_MY_APPROVAL</fullName>
            </value>
            <value>
                <fullName>WAITING_FOR_MY_ACCEPTANCE</fullName>
            </value>
            <value>
                <fullName>WAITING_FOR_MY_ACKNOWLEDGEMENT</fullName>
            </value>
            <value>
                <fullName>WAITING_FOR_MY_FORM_FILLING</fullName>
            </value>
            <value>
                <fullName>WAITING_FOR_MY_DELEGATION</fullName>
            </value>
            <value>
                <fullName>OUT_FOR_SIGNATURE</fullName>
            </value>
            <value>
                <fullName>SIGNED</fullName>
            </value>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>ACCEPTED</fullName>
            </value>
            <value>
                <fullName>DELIVERED</fullName>
            </value>
            <value>
                <fullName>FORM_FILLED</fullName>
            </value>
            <value>
                <fullName>HIDDEN</fullName>
            </value>
            <value>
                <fullName>NOT_YET_VISIBLE</fullName>
            </value>
            <value>
                <fullName>WAITING_FOR_FAXIN</fullName>
            </value>
            <value>
                <fullName>ARCHIVED</fullName>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
            </value>
            <value>
                <fullName>PARTIAL</fullName>
            </value>
            <value>
                <fullName>FORM</fullName>
            </value>
            <value>
                <fullName>WAITING_FOR_AUTHORING</fullName>
            </value>
            <value>
                <fullName>OUT_FOR_APPROVAL</fullName>
            </value>
            <value>
                <fullName>OUT_FOR_ACCEPTANCE</fullName>
            </value>
            <value>
                <fullName>OUT_FOR_DELIVERY</fullName>
            </value>
            <value>
                <fullName>OUT_FOR_FORM_FILLING</fullName>
            </value>
            <value>
                <fullName>WIDGET</fullName>
            </value>
            <value>
                <fullName>WAITING_FOR_MY_REVIEW</fullName>
            </value>
            <value>
                <fullName>IN_REVIEW</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>EXPIRED</fullName>
            </value>
            <value>
                <fullName>RECALLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>